--- a/context/Dockerfile
+++ b/context/Dockerfile
@@ -2,15 +2,14 @@ FROM postgres:9.6
 MAINTAINER Yadwinder Paul Singh <yadwinderpaul@gmail.com>
 
 ENV POSTGIS_MAJOR 2.5
-ENV POSTGIS_VERSION 2.5.0+dfsg-2.pgdg90+1
 ENV PGTAP_VERSION v0.95.0
 
 RUN apt-get update && \
   apt-get install -y --no-install-recommends \
     build-essential curl ca-certificates git postgresql-server-dev-$PG_MAJOR \
-    postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR=$POSTGIS_VERSION \
-    postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR-scripts=$POSTGIS_VERSION \
-    postgis=$POSTGIS_VERSION && \
+    postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR \
+    postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR-scripts \
+    postgis=$POSTGIS_MAJOR.* && \
   rm -rf /var/lib/apt/lists/*
 
 RUN curl -LO http://xrl.us/cpanm && \
@@ -26,6 +25,14 @@ RUN mkdir -p /usr/share/postgresql/9.6/extension
 RUN chown postgres:postgres -R /pgtap
 RUN chown postgres:postgres -R /usr/share/doc/postgresql-doc-$PG_MAJOR
 RUN chown postgres:postgres -R /usr/share/postgresql
+
+# install locales
+RUN apt-get install --reinstall -y locales
+RUN sed -i 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen
+RUN sed -i 's/# sv_SE.UTF-8 UTF-8/sv_SE.UTF-8 UTF-8/' /etc/locale.gen
+RUN sed -i 's/# fr_FR.UTF-8 UTF-8/fr_FR.UTF-8 UTF-8/' /etc/locale.gen
+RUN sed -i 's/# nl_NL.UTF-8 UTF-8/nl_NL.UTF-8 UTF-8/' /etc/locale.gen
+RUN locale-gen en_US.UTF-8 sv_SE.UTF-8 fr_FR.UTF-8 nl_NL.UTF-8
 
 RUN mkdir -p /docker-entrypoint-initdb.d
 COPY ./initdb-pgtap.sh /docker-entrypoint-initdb.d/pgtap.sh
